--- a/app/posts/templates/posts/index.html
+++ b/app/posts/templates/posts/index.html
@@ -1,15 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %}
-
-    Index page
-
+    Blueprint index pages
 {% endblock %}
 
 {% block content_title %}
-        Index page
+    Blueprint index pages
 {% endblock %}
 
 {% block content %}
-    Some content
+    Blueprint some content
 {% endblock %}
