--- a/app/posts/templates/posts/index.html
+++ b/app/posts/templates/posts/index.html
@@ -9,9 +9,21 @@
 {% endblock %}
 
 {% block content %}
-    {% for post in posts %}
+    {% for post in pages.items %}
         <p>
             <a href={{url_for('posts.post_detail', slug=post.slug)}}>{{post.title}}</a>
         </p>
     {% endfor %}
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li {% if pages.has_prev %} class="disabled" > {% endif %}
+                <a class="page-link" href="./?page={{ pages.prev_num }}">Previous</a></li>
+                    {% for page in pages.iter_pages() %}
+                        <li {% if page==pages.page %} class="active" {% endif %} >
+                            <a class="page-link" href="./?page={{ page }}"> {{ page }} <span class="sr-only"> (current) </span></a></li>
+                    {% endfor %}
+            <li {% if pages.has_next %} class="disabled" > {% endif %}
+                <a class="page-link" href="./?page={{ pages.next_num }}">Next</a></li>
+        </ul>
+    </nav>
 {% endblock %}
