--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,18 +22,26 @@
             <li class="nav-item active">
                 <a class="nav-link" href="{{ url_for('posts.index') }}">Blog <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('posts.create_post') }}">Create post</a>
-            </li>
+
             <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </li>
-        </ul>
-
-        <form class="form-inline my-2 my-lg-0" method="get">
+            <form class="form-inline my-2 my-lg-0" method="get">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q" value="{{ request.args.get('q', '') }}">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+        </ul>
+
+
+
+        <li class="nav-item">
+<!--                <a class="nav-link" href="{{ url_for('posts.create_post') }}">Create post</a>-->
+                <li>
+                    {% if current_user.has_role('admin') %}
+                        <a href="/admin">Admin</a>
+                    {% endif %}
+                </li>
+            </li>
 
     </div>
 </nav>
