Add custom error handler

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,12 +2,12 @@
 
 {% block title %}
 
-    Index page
+    Main page
 
 {% endblock %}
 
 {% block content_title %}
-        Index page
+        Main page
 {% endblock %}
 
 {% block content %}
